create footer and add css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,16 @@
 @import 'bootstrap/dist/css/bootstrap';
 
+html {
+    margin: 0;
+}
+
+body {
+    background-color: #eeeeee;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .search-area {
   padding-top: 50px;
 }
@@ -25,3 +36,13 @@
   margin-top: 3.5%;
   padding-right: 5px;
 }
+
+footer {
+  margin-top: auto;
+  background-color: #f8f9fa;
+}
+
+footer p{
+    font-size: 1rem;
+    margin: 0%;
+  }
