--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="sticky-footer" class="py-4">
   <div class="container text-center">
-    <p>&copy; FinanceTracker 2022, All rights reserved.</p>
+    <p>&copy; 2022 FinanceTracker, All rights reserved.</p>
   </div>
 </footer>
