--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -5,7 +5,7 @@
         <tr>
           <th scope="col">Ticker</th>
           <th scope="col">Name</th>
-          <th scope="col">Price</th>
+          <th scope="col">Last Price</th>
           <th scope="col">Actions</th>
         </tr>
       </thead>
