--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to the Finance Tracker app</h1>
-<p>Create a welcome page</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container text-center">
+    <h1 class="display-6">Welcome to the</h1>
+    <h1 class="display-4">Finance Tracker App</h1>
+    <p class="lead">Search the company stocks using their <strong>stock ticker symbol</strong><br/>
+    and you can add to portfolio.</p>
+  </div>
+</div>
